# pyegui

./: Cargo.toml  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: sphinx.yml
docs/: api.rst  conf.py  examlpes.rst  genindex.html  guides.html  guides.rst  index.rst  objects.inv  py-modindex.html  search.html
docs/.doctrees/: environment.pickle  examlpes.doctree  guides.doctree  index.doctree
docs/.doctrees/module/: context.doctree  helpers.doctree  ui.doctree  widgets.doctree
docs/_sources/module/: widgets.rst.txt
docs/module/: context.html  context.rst  helpers.rst  ui.html  ui.rst  widgets.html
docsrc/: conf.py  index.rst
examples/: pages.py  widget_gallery.py
guides/: centerhor.py  copytext.py  copytextprog.py  openurl.py
pages/: .buildinfo  examlpes.html  index.html  searchindex.js
pages/.doctrees/: environment.pickle  examlpes.doctree  guides.doctree  index.doctree
pages/.doctrees/module/: context.doctree  helpers.doctree  ui.doctree  widgets.doctree
pages/_sources/: examlpes.rst.txt
pages/module/: helpers.html
src/: lib.rs
