[package]
name = "pyegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyegui"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["chrono"] }
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders", "datepicker"] }
chrono = "0.4.40"
