[package]
name = "pyegui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyegui"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["chrono", "abi3-py311", "generate-import-lib", "extension-module"] }
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders", "datepicker"] }
chrono = "0.4.40"
log = { version = "0.4.27", features = ["release_max_level_info"] }
pyo3-log = "0.12.3"
